--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -114,149 +114,52 @@ title: Kap Örgüsü
     </code></pre>
     <p></p>
 
-    <h2>Kap Örgüsü Tablosu</h2>
-
-    <div data-gnl="1 1p" style="overflow:auto; height:50vh;">
-    <style type="text/css">
-    .tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;}
-    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:5px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;}
-    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:5px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;}
-    .tg .tg-baqh{text-align:center;vertical-align:top}
-    .tg .tg-gffc{font-size:100%;background-color:#efefef;text-align:center;vertical-align:top}
-    .tg .tg-a1rn{background-color:#ffffc7}
-    .tg .tg-lfnm{background-color:#cbcefb;text-align:center}
-    .tg .tg-sh07{background-color:#cbcefb;text-align:center;vertical-align:top}
-    .tg .tg-j4kc{background-color:#efefef;text-align:center}
-    .tg .tg-kjho{background-color:#ffffc7;vertical-align:top}
-    .tg .tg-i81m{background-color:#ffffff;text-align:center;vertical-align:top}
-    .tg .tg-2nhx{background-color:#9b9b9b;text-align:center;vertical-align:top}
-    </style>
-    <table class="tg">
-      <tr>
-        <th class="tg-031e">-----------------------</th>
-        <th class="tg-031e">-----------------------</th>
-        <th class="tg-031e" colspan="2">----------------------------------------------</th>
-        <th class="tg-031e" colspan="3">---------------------------------------------------------------------</th>
-        <th class="tg-031e" colspan="3">---------------------------------------------------------------------</th>
-        <th class="tg-031e" colspan="3">---------------------------------------------------------------------</th>
-        <th class="tg-031e" colspan="2">---------------------------------------------------------------------</th>
-      </tr>
-      <tr>
-        <td class="tg-a1rn">Nitelikler</td>
-        <td class="tg-lfnm">data-deveb</td>
-        <td class="tg-lfnm" colspan="2">data-gnl</td>
-        <td class="tg-sh07" colspan="3">data-ufk</td>
-        <td class="tg-sh07" colspan="3">data-ort</td>
-        <td class="tg-sh07" colspan="3">data-byk</td>
-        <td class="tg-sh07" colspan="2">data-dev</td>
-      </tr>
-      <tr>
-        <td class="tg-a1rn" rowspan="2">Ekranlar<br></td>
-        <td class="tg-j4kc">Tümü<br></td>
-        <td class="tg-j4kc">Tümü</td>
-        <td class="tg-j4kc">Minik<br></td>
-        <td class="tg-j4kc">Ufak-∞</td>
-        <td class="tg-j4kc">Ufak</td>
-        <td class="tg-j4kc">0-Ufak<br></td>
-        <td class="tg-j4kc">Orta-∞</td>
-        <td class="tg-j4kc">Orta</td>
-        <td class="tg-j4kc">0-Orta<br></td>
-        <td class="tg-j4kc">Büyük-∞</td>
-        <td class="tg-j4kc">Büyük</td>
-        <td class="tg-j4kc">0-Büyük<br></td>
-        <td class="tg-j4kc">Dev<br></td>
-        <td class="tg-j4kc">0-Dev<br></td>
-      </tr>
-      <tr>
-        <td class="tg-gffc">0 ≤ * &lt; ∞</td>
-        <td class="tg-gffc">0 ≤ * &lt; ∞</td>
-        <td class="tg-gffc">0 ≤ * &lt; 576px</td>
-        <td class="tg-gffc">576px ≤ * &gt; ∞</td>
-        <td class="tg-gffc">576px ≤ * &lt; 768px</td>
-        <td class="tg-gffc">768px &gt; * ≥ 0</td>
-        <td class="tg-gffc">768px ≤ * &gt; ∞</td>
-        <td class="tg-gffc">768px ≤ * &lt; 992px</td>
-        <td class="tg-gffc">992px &gt; * ≥ 0</td>
-        <td class="tg-gffc">992px ≤ * &gt; ∞</td>
-        <td class="tg-gffc">992px ≤ * &lt; 1200px</td>
-        <td class="tg-gffc">1200px &gt; * ≥ 0</td>
-        <td class="tg-gffc">1200px ≤ * &gt; ∞</td>
-        <td class="tg-gffc">1200px &gt; * ≥ 0</td>
-      </tr>
-      <tr>
-        <td class="tg-kjho">"kaplama"<br></td>
-        <td class="tg-i81m">≥0px=<br>genişlik:auto<br><br>≥992px=<br>genişlik:960px<br><br>≥1200px=<br>genişlik:1140px</td>
-        <td class="tg-i81m">≥0px=<br>genişlik:auto<br><br>≥576px=<br>genişlik:566px<br><br>≥768px=<br>genişlik:760px<br><br>≥992px=<br>genişlik:960px<br><br>≥1200px=<br>genişlik:1140px</td>
-        <td class="tg-i81m">genişlik:auto<br></td>
-        <td class="tg-2nhx" rowspan="2">tanımsız</td>
-        <td class="tg-baqh">genişlik:566px<br></td>
-        <td class="tg-2nhx" rowspan="3">tanımsız<br></td>
-        <td class="tg-2nhx" rowspan="2">tanımsız</td>
-        <td class="tg-baqh">genişlik:760px<br></td>
-        <td class="tg-2nhx" rowspan="3">tanımsız</td>
-        <td class="tg-2nhx" rowspan="2">tanımsız</td>
-        <td class="tg-baqh">genişlik:960px</td>
-        <td class="tg-2nhx" rowspan="3">tanımsız<br></td>
-        <td class="tg-baqh">genişlik:1140px</td>
-        <td class="tg-2nhx" rowspan="3">tanımsız</td>
-      </tr>
-      <tr>
-        <td class="tg-kjho">"tam-kaplama"<br>genişlik:100%</td>
-        <td class="tg-baqh">var</td>
-        <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-baqh">var</td>
-        <td class="tg-baqh">var</td>
-        <td class="tg-baqh">var</td>
-        <td class="tg-baqh">var</td>
-        <td class="tg-baqh">var</td>
-      </tr>
-      <tr>
-        <td class="tg-kjho">Parçalı Genişlikler<br>"1~24 1p~24p"<br>4.16%~100%</td>
-        <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-baqh" colspan="4">var<br></td>
-        <td class="tg-baqh" colspan="2">var</td>
-        <td class="tg-baqh" colspan="2">var</td>
-        <td class="tg-baqh">var</td>
-      </tr>
-      <tr>
-        <td class="tg-kjho">Oranlı Genişlikler<br>"1o~24o"<br>4.16%~100%</td>
-        <td class="tg-2nhx">tanımsız<br></td>
-        <td class="tg-baqh" colspan="4">var<br></td>
-        <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-baqh" colspan="2">var</td>
-        <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-baqh" colspan="2">var</td>
-        <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-baqh">var</td>
-        <td class="tg-2nhx">tanımsız</td>
-      </tr>
-      <tr>
-        <td class="tg-kjho">Konumlama<br>"solda", "ortada", "sağda", "üstte", "göbekte", "altta", "merkezde", "çizgide", "solda-ol", "ortada-ol", "sağda-ol", "üstte-ol", "göbekte-ol", "altta-ol", "merkezde-ol", "çizgide-ol", "ters-satır", "ters-sütun", "ters-dizi", "kayma", "taşma"<br></td>
-        <td class="tg-baqh">var</td>
-        <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-baqh">var</td>
-        <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-baqh">var</td>
-        <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-baqh">var</td>
-        <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-baqh">var</td>
-        <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-baqh">var</td>
-        <td class="tg-2nhx">tanımsız</td>
-      </tr>
-    </table>
-    </div>
-
     <h2>Kap Örgüsü Konumlama</h2>
 
-    <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç sınıfla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
+    <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç öznitelik sınıfıyla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
 
     <h3>Konumlama: <span data-metin="dikkat">taşma | kayma</span></h3>
     <p>"taşma" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
     <p>"kayma" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
+    <div data-gnl="1 1p" class="önizleme">
+      <h3>Önizleme</h3>
+      <div data-gnl="2 2p kayma">
+        <div>
+          Bu alan kayma içeriği kayma olmadan görüntülenir.
+        </div>
+        <div>
+          Bu alan kayma içeriği kayma olmadan görüntülenir.
+        </div>
+        <div>
+          Bu alan kayma içeriği kayma olmadan görüntülenir.
+        </div>
+        <div>
+          Bu alan kayma içeriği kayma olmadan görüntülenir.
+        </div>
+        <div>
+          Bu alan kayma içeriği kayma olmadan görüntülenir.
+        </div>
+      </div>
+    </div>
+    <pre data-gnl="1 1p"><code class="language-html">
+    &lt;div data-gnl=&quot;2 2p&quot;&gt;
+      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      &lt;/div&gt;
+    &lt;/div&gt;
+    </code></pre>
+    <p></p>
+
+
     <div data-gnl="1 1p">
       <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/8e3t02t7/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
       <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/8e3t02t7/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
