--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -123,7 +123,22 @@ title: Kap Örgüsü
     <p>"kayma" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
-      <div data-gnl="2 2p kayma">
+      <div data-gnl="2 2p kaymadan">
+        <div>
+          Bu alan kayma içeriği kayma olmadan görüntülenir.
+        </div>
+        <div>
+          Bu alan kayma içeriği kayma olmadan görüntülenir.
+        </div>
+        <div>
+          Bu alan kayma içeriği kayma olmadan görüntülenir.
+        </div>
+        <div>
+          Bu alan kayma içeriği kayma olmadan görüntülenir.
+        </div>
+        <div>
+          Bu alan kayma içeriği kayma olmadan görüntülenir.
+        </div>
         <div>
           Bu alan kayma içeriği kayma olmadan görüntülenir.
         </div>
