--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -118,58 +118,40 @@ title: Kap Örgüsü
 
     <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç öznitelik sınıfıyla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">taşma | kayma</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">taşmadan | kaymadan</span></h3>
     <p>"taşma" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
     <p>"kayma" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
-      <div data-gnl="2 2p kaymadan">
+      <div data-gnl="1 1p kaymadan">
         <div>
-          Bu alan kayma içeriği kayma olmadan görüntülenir.
+          Buradaki içerikler kaymadan etkisi altında görüntülenmektedir.
         </div>
         <div>
-          Bu alan kayma içeriği kayma olmadan görüntülenir.
+          Buradaki içerikler kaymadan etkisi altında görüntülenmektedir.
         </div>
         <div>
-          Bu alan kayma içeriği kayma olmadan görüntülenir.
+          Buradaki içerikler kaymadan etkisi altında görüntülenmektedir.
         </div>
         <div>
-          Bu alan kayma içeriği kayma olmadan görüntülenir.
-        </div>
-        <div>
-          Bu alan kayma içeriği kayma olmadan görüntülenir.
-        </div>
-        <div>
-          Bu alan kayma içeriği kayma olmadan görüntülenir.
-        </div>
-        <div>
-          Bu alan kayma içeriği kayma olmadan görüntülenir.
-        </div>
-        <div>
-          Bu alan kayma içeriği kayma olmadan görüntülenir.
-        </div>
-        <div>
-          Bu alan kayma içeriği kayma olmadan görüntülenir.
-        </div>
-        <div>
-          Bu alan kayma içeriği kayma olmadan görüntülenir.
+          Buradaki içerikler kaymadan etkisi altında görüntülenmektedir.
         </div>
       </div>
     </div>
     <pre data-gnl="1 1p"><code class="language-html">
-    &lt;div data-gnl=&quot;2 2p&quot;&gt;
-      &lt;div data-gnl=&quot;1 4p&quot;&gt;
-        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1 4p&quot;&gt;
-        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1 4p&quot;&gt;
-        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1 4p&quot;&gt;
-        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 1p kaymadan&quot;&gt;
+     &lt;div&gt;
+      Buradaki i&ccedil;erikler kaymadan etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
+     &lt;/div&gt;
+     &lt;div&gt;
+      Buradaki i&ccedil;erikler kaymadan etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
+     &lt;/div&gt;
+     &lt;div&gt;
+      Buradaki i&ccedil;erikler kaymadan etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
+     &lt;/div&gt;
+     &lt;div&gt;
+      Buradaki i&ccedil;erikler kaymadan etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
+     &lt;/div&gt;
     &lt;/div&gt;
     </code></pre>
     <p></p>
