--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -182,7 +182,7 @@ title: Kap Örgüsü
       </div>
       <div data-gnl="1 1p sağda">
         <div data-gnl="1 3p">
-          solda
+          sağda
         </div>
       </div>
     </div>
@@ -199,7 +199,7 @@ title: Kap Örgüsü
     &lt;/div&gt;
     &lt;div data-gnl=&quot;1 1p sa&#287;da&quot;&gt;
      &lt;div data-gnl=&quot;1 3p&quot;&gt;
-      solda
+      sağda
      &lt;/div&gt;
     &lt;/div&gt;
     </code></pre>
@@ -209,10 +209,42 @@ title: Kap Örgüsü
     <p>"üstte" sınıfı bir HTML etiketindeki içeriği başa doğru dayalı olarak gösterir.</p>
     <p>"göbekte" sınıfı bir HTML etiketindeki içeriği dikey konumda ortalanmış gösterir.</p>
     <p>"altta" sınıfı bir HTML etiketindeki içeriği en aşağıya dayalı olarak gösterir.</p>
-    <div data-gnl="1 1p">
-      <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/Lya0jeoa/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-      <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/Lya0jeoa/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <div data-gnl="1 1p" class="önizleme">
+      <h3>Önizleme</h3>
+      <div data-gnl="1 1p üstte" style="height:33vh;">
+        <div data-gnl="1 1p">
+          üstte
+        </div>
+      </div>
+      <div data-gnl="1 1p göbekte" style="height:33vh;">
+        <div data-gnl="1 1p">
+          göbekte
+        </div>
+      </div>
+      <div data-gnl="1 1p altta" style="height:33vh;">
+        <div data-gnl="1 1p">
+          altta
+        </div>
+      </div>
     </div>
+    <pre data-gnl="1 1p"><code class="language-html">
+    &lt;div data-gnl=&quot;1 1p solda&quot;&gt;
+     &lt;div data-gnl=&quot;1 3p&quot;&gt;
+      solda
+     &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 1p ortada&quot;&gt;
+     &lt;div data-gnl=&quot;1 3p&quot;&gt;
+      ortada
+     &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 1p sa&#287;da&quot;&gt;
+     &lt;div data-gnl=&quot;1 3p&quot;&gt;
+      sağda
+     &lt;/div&gt;
+    &lt;/div&gt;
+    </code></pre>
+    <p></p>
 
 
     <h3>Konumlama: <span data-metin="dikkat">ger | yay</span></h3>
