--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -307,48 +307,48 @@ title: Kap Örgüsü
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
       <div data-gnl="1 2p uzat" style="height:33vh;">
-        <div data-gnl="1 8p">
+        <div data-gnl="0">
           uzat
         </div>
-        <div data-gnl="1 8p">
+        <div data-gnl="0">
           uzat
         </div>
-        <div data-gnl="1 8p">
+        <div data-gnl="0">
           uzat
         </div>
       </div>
       <div data-gnl="1 2p">
-        <div data-gnl="1 8p">
+        <div data-gnl="0">
           varsayılan
         </div>
-        <div data-gnl="1 8p uzun-ol">
+        <div data-gnl="0 uzun-ol">
           uzun-ol
         </div>
-        <div data-gnl="1 8p">
+        <div data-gnl="0">
           varsayılan
         </div>
       </div>
     </div>
     <pre data-gnl="1 1p"><code class="language-html">
     &lt;div data-gnl=&quot;1 2p uzat&quot; style=&quot;height:33vh;&quot;&gt;
-     &lt;div data-gnl=&quot;1 8p&quot;&gt;
+     &lt;div data-gnl=&quot;0&quot;&gt;
        uzat
      &lt;/div&gt;
-     &lt;div data-gnl=&quot;1 8p&quot;&gt;
+     &lt;div data-gnl=&quot;0&quot;&gt;
        uzat
      &lt;/div&gt;
-     &lt;div data-gnl=&quot;1 8p&quot;&gt;
+     &lt;div data-gnl=&quot;0&quot;&gt;
        uzat
      &lt;/div&gt;
     &lt;/div&gt;
     &lt;div data-gnl=&quot;1 2p&quot;&gt;
-     &lt;div data-gnl=&quot;1 8p&quot;&gt;
+     &lt;div data-gnl=&quot;0&quot;&gt;
        varsay&#305;lan
      &lt;/div&gt;
-     &lt;div data-gnl=&quot;1 8p uzun-ol&quot;&gt;
+     &lt;div data-gnl=&quot;0 uzun-ol&quot;&gt;
        uzun-ol
      &lt;/div&gt;
-     &lt;div data-gnl=&quot;1 8p&quot;&gt;
+     &lt;div data-gnl=&quot;0&quot;&gt;
        varsay&#305;lan
      &lt;/div&gt;
     &lt;/div&gt;
