--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -317,7 +317,7 @@ title: Kap Örgüsü
           uzat
         </div>
       </div>
-      <div data-gnl="1 2p">
+      <div data-gnl="1 2p" style="height:33vh;">
         <div data-gnl="0">
           varsayılan
         </div>
@@ -341,7 +341,7 @@ title: Kap Örgüsü
        uzat
      &lt;/div&gt;
     &lt;/div&gt;
-    &lt;div data-gnl=&quot;1 2p&quot;&gt;
+    &lt;div data-gnl=&quot;1 2p&quot; style=&quot;height:33vh;&quot;&gt;
      &lt;div data-gnl=&quot;0&quot;&gt;
        varsay&#305;lan
      &lt;/div&gt;
