--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -360,55 +360,42 @@ title: Kap Örgüsü
     <p>"çizgide-ol" sınıfı bir buldunduğu etiketi bir çizgi konumuna dizerek gösterir.</p>
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
-      <div data-gnl="1 2p çizgide" style="height:33vh;">
-        <div data-gnl="0">
-          Örnek bir yazı çizgide.
+      <div data-gnl="1 2p satırda" style="height:33vh;">
+        <div data-gnl="0" style="font-size:3em">
+          Örnek bir yazı "satırda".
         </div>
         <div data-gnl="0">
-          Örnek bir yazı çizgide.
-        </div>
-        <div data-gnl="0">
-          Örnek bir yazı çizgide.<br>Çizgide örnek bir yazı
+          Örnek bir yazı "satırda".
         </div>
       </div>
       <div data-gnl="1 2p" style="height:33vh;">
-        <div data-gnl="0">
-          Örnek bir yazı varsayılan.
+        <div data-gnl="0 satırda-ol" style="font-size:3em">
+          Örnek bir yazı "satırda-ol".
         </div>
-        <div data-gnl="0 çizgide-ol">
-          Örnek bir yazı varsayılan değil. <br>Çizgide olması gereken bir yazı.
-        </div>
-        <div data-gnl="0">
-          Örnek bir yazı varsayılan.
+        <div data-gnl="0 satırda-ol">
+          Örnek bir yazı "satırda-ol".
         </div>
       </div>
     </div>
     <pre data-gnl="1 1p"><code class="language-html">
-    &lt;div data-gnl=&quot;1 2p &ccedil;izgide&quot; style=&quot;height:33vh;&quot;&gt;
-      &lt;div data-gnl=&quot;0&quot;&gt;
-        &Ouml;rnek bir yaz&#305; &ccedil;izgide.
+    &lt;div data-gnl=&quot;1 2p sat&#305;rda&quot; style=&quot;height:33vh;&quot;&gt;
+      &lt;div data-gnl=&quot;0&quot; style=&quot;font-size:3em&quot;&gt;
+        &Ouml;rnek bir yaz&#305; &quot;sat&#305;rda&quot;.
       &lt;/div&gt;
       &lt;div data-gnl=&quot;0&quot;&gt;
-        &Ouml;rnek bir yaz&#305; &ccedil;izgide.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;0&quot;&gt;
-        &Ouml;rnek bir yaz&#305; &ccedil;izgide.&lt;br&gt;&Ccedil;izgide &ouml;rnek bir yaz&#305;
+        &Ouml;rnek bir yaz&#305; &quot;sat&#305;rda&quot;.
       &lt;/div&gt;
     &lt;/div&gt;
     &lt;div data-gnl=&quot;1 2p&quot; style=&quot;height:33vh;&quot;&gt;
-      &lt;div data-gnl=&quot;0&quot;&gt;
-        &Ouml;rnek bir yaz&#305; varsay&#305;lan.
+      &lt;div data-gnl=&quot;0 sat&#305;rda-ol&quot; style=&quot;font-size:3em&quot;&gt;
+        &Ouml;rnek bir yaz&#305; &quot;sat&#305;rda-ol&quot;.
       &lt;/div&gt;
-      &lt;div data-gnl=&quot;0 &ccedil;izgide-ol&quot;&gt;
-        &Ouml;rnek bir yaz&#305; varsay&#305;lan de&#287;il. &lt;br&gt;&Ccedil;izgide olmas&#305; gereken bir yaz&#305;.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;0&quot;&gt;
-        &Ouml;rnek bir yaz&#305; varsay&#305;lan.
+      &lt;div data-gnl=&quot;0 sat&#305;rda-ol&quot;&gt;
+        &Ouml;rnek bir yaz&#305; &quot;sat&#305;rda-ol&quot;.
       &lt;/div&gt;
     &lt;/div&gt;
     </code></pre>
     <p></p>
-
 
     <h3>Konumlama: <span data-metin="dikkat">ters-dizi | ters-satır | ters-sütun</span></h3>
     <p>"ters-dizi" sınıfı bir HTML etiketindeki içeriği ters yönde dizerek gösterir.</p>
