--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -355,9 +355,9 @@ title: Kap Örgüsü
     </code></pre>
     <p></p>
 
-    <h3>Konumlama: <span data-metin="dikkat">çizgide | çizgide-ol</span></h3>
-    <p>"çizgide" sınıfı bir HTML etiketindeki içeriği bir çizgiye dizerek gösterir.</p>
-    <p>"çizgide-ol" sınıfı bir buldunduğu etiketi bir çizgi konumuna dizerek gösterir.</p>
+    <h3>Konumlama: <span data-metin="dikkat">satırda | satırda-ol</span></h3>
+    <p>"satırda" sınıfı bir HTML etiketindeki içeriği bir çizgiye dizerek gösterir.</p>
+    <p>"satırda-ol" sınıfı bir buldunduğu etiketi bir çizgi konumuna dizerek gösterir.</p>
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
       <div data-gnl="1 2p satırda" style="height:33vh;">
