--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -121,6 +121,7 @@ title: Kap Örgüsü
     <h3>Konumlama: <span data-metin="dikkat">taşmadan | kaymadan</span></h3>
     <p>"taşmadan" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
     <p>"kaymadan" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
+    <p></p>
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
       <div data-gnl="1 1p kaymadan">
@@ -162,12 +163,11 @@ title: Kap Örgüsü
       <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/8e3t02t7/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     </div>
 
-
     <h3>Konumlama: <span data-metin="dikkat">solda | ortada | sağda</span></h3>
     <p>"solda" sınıfı bir HTML etiketindeki içeriği sola dayalı olarak gösterir.</p>
     <p>"ortada" sınıfı bir HTML etiketindeki içeriği ortalanmış olarak gösterir.</p>
     <p>"sağda" sınıfı bir HTML etiketindeki içeriği sağa dayalı olarak gösterir.</p>
-
+    <p></p>
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
       <div data-gnl="1 1p solda">
@@ -205,23 +205,45 @@ title: Kap Örgüsü
     </code></pre>
     <p></p>
 
-    <h3>Konumlama: <span data-metin="dikkat">üstte | göbekte | altta</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">üstte | göbekte | altta | üstte-ol | göbekte-ol | altta-ol</span></h3>
     <p>"üstte" sınıfı bir HTML etiketindeki içeriği başa doğru dayalı olarak gösterir.</p>
     <p>"göbekte" sınıfı bir HTML etiketindeki içeriği dikey konumda ortalanmış gösterir.</p>
     <p>"altta" sınıfı bir HTML etiketindeki içeriği en aşağıya dayalı olarak gösterir.</p>
+    <p>"üstte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin üstüne dayalı olarak gösterir.</p>
+    <p>"göbekte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin dikey konumunda ortalanmış olarak gösterir.</p>
+    <p>"altta-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin aşağısına dayalı olarak gösterir.</p>
+    <p></p>
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
       <div data-gnl="1 3p üstte" style="height:33vh;">
         <div data-gnl="1 1p">
           üstte
         </div>
+        <div data-gnl="1 1p göbekte-ol">
+          göbekte-ol
+        </div>
+        <div data-gnl="1 1p altta-ol">
+          altta-ol
+        </div>
       </div>
       <div data-gnl="1 3p göbekte" style="height:33vh;">
+        <div data-gnl="1 1p üstte-ol">
+          üstte-ol
+        </div>
         <div data-gnl="1 1p">
           göbekte
         </div>
+        <div data-gnl="1 1p altta-ol">
+          altta-ol
+        </div>
       </div>
       <div data-gnl="1 3p altta" style="height:33vh;">
+        <div data-gnl="1 1p üstte-ol">
+          üstte-ol
+        </div>
+        <div data-gnl="1 1p göbekte-ol">
+          göbekte-ol
+        </div>
         <div data-gnl="1 1p">
           altta
         </div>
@@ -232,13 +254,31 @@ title: Kap Örgüsü
       &lt;div data-gnl=&quot;1 1p&quot;&gt;
         &uuml;stte
       &lt;/div&gt;
-    &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 1p g&ouml;bekte-ol&quot;&gt;
+        g&ouml;bekte-ol
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 1p altta-ol&quot;&gt;
+        altta-ol
+      &lt;/div&gt;
+      &lt;/div&gt;
     &lt;div data-gnl=&quot;1 3p g&ouml;bekte&quot; style=&quot;height:33vh;&quot;&gt;
+      &lt;div data-gnl=&quot;1 1p &uuml;stte-ol&quot;&gt;
+        &uuml;stte-ol
+      &lt;/div&gt;
       &lt;div data-gnl=&quot;1 1p&quot;&gt;
         g&ouml;bekte
       &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 1p altta-ol&quot;&gt;
+        altta-ol
+      &lt;/div&gt;
     &lt;/div&gt;
     &lt;div data-gnl=&quot;1 3p altta&quot; style=&quot;height:33vh;&quot;&gt;
+      &lt;div data-gnl=&quot;1 1p &uuml;stte-ol&quot;&gt;
+        &uuml;stte-ol
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 1p g&ouml;bekte-ol&quot;&gt;
+        g&ouml;bekte-ol
+      &lt;/div&gt;
       &lt;div data-gnl=&quot;1 1p&quot;&gt;
         altta
       &lt;/div&gt;
@@ -407,11 +447,7 @@ title: Kap Örgüsü
     </div>
 
 
-    <h3>Konumlama: <span data-metin="dikkat">üstte-ol | göbekte-ol | altta-ol</span></h3>
-    <p>"üstte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin üstüne dayalı olarak gösterir.</p>
-    <p>"göbekte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin dikey konumunda ortalanmış olarak gösterir.</p>
-    <p>"altta-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin aşağısına dayalı olarak gösterir.</p>
-    <div data-gnl="1 1p">
+        <div data-gnl="1 1p">
       <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
       <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     </div>
