--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -441,24 +441,134 @@ title: Kap Örgüsü
     <p>"ters-dizi" sınıfı bir HTML etiketindeki içeriği ters yönde dizerek gösterir.</p>
     <p>"ters-satır" sınıfı bir HTML etiketindeki satırları aynalı olarak gösterir.</p>
     <p>"ters-sütun" sınıfı bir HTML etiketindeki sütunları aynalı olarak gösterir.</p>
-    <div data-gnl="1 1p">
-      <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/3bfdm2qm/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-      <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/3bfdm2qm/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <p></p>
+    <div data-gnl="1 1p" class="önizleme">
+      <h3>Önizleme</h3>
+      <div data-gnl="1 1p ters-dizi">
+        <div data-gnl="1 3p">
+          ters-dizi #1
+        </div>
+        <div data-gnl="1 3p">
+          ters-dizi #2
+        </div>
+        <div data-gnl="1 3p">
+          ters-dizi #3
+        </div>
+        <div data-gnl="1 3p">
+          ters-dizi #4
+        </div>
+        <div data-gnl="1 3p">
+          ters-dizi #5
+        </div>
+        <div data-gnl="1 3p">
+          ters-dizi #6
+        </div>
+      </div>
+      <div data-gnl="1 1p ters-satır">
+        <div data-gnl="1 3p">
+          ters-satır #1
+        </div>
+        <div data-gnl="1 3p">
+          ters-satır #2
+        </div>
+        <div data-gnl="1 3p">
+          ters-satır #3
+        </div>
+        <div data-gnl="1 3p">
+          ters-satır #4
+        </div>
+        <div data-gnl="1 3p">
+          ters-satır #5
+        </div>
+        <div data-gnl="1 3p">
+          ters-satır #6
+        </div>
+      </div>
+      <div data-gnl="1 1p ters-sütun">
+        <div data-gnl="1 3p">
+          ters-sütun #1
+        </div>
+        <div data-gnl="1 3p">
+          ters-sütun #2
+        </div>
+        <div data-gnl="1 3p">
+          ters-sütun #3
+        </div>
+        <div data-gnl="1 3p">
+          ters-sütun #4
+        </div>
+        <div data-gnl="1 3p">
+          ters-sütun #5
+        </div>
+        <div data-gnl="1 3p">
+          ters-sütun #6
+        </div>
+      </div>
     </div>
+    <pre data-gnl="1 1p"><code class="language-html">
+    &lt;div data-gnl=&quot;1 1p ters-dizi&quot;&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-dizi #1
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-dizi #2
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-dizi #3
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-dizi #4
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-dizi #5
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-dizi #6
+      &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 1p ters-sat&#305;r&quot;&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-sat&#305;r #1
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-sat&#305;r #2
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-sat&#305;r #3
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-sat&#305;r #4
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-sat&#305;r #5
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-sat&#305;r #6
+      &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 1p ters-s&uuml;tun&quot;&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-s&uuml;tun #1
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-s&uuml;tun #2
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-s&uuml;tun #3
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-s&uuml;tun #4
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-s&uuml;tun #5
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 3p&quot;&gt;
+        ters-s&uuml;tun #6
+      &lt;/div&gt;
+    &lt;/div&gt;
+    </code></pre>
+    <p></p>
 
-
-        <div data-gnl="1 1p">
-      <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-      <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-    </div>
-    <h2>Konular</h2>
-    <div data-gnl="24">
-      <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Ana Yapı    </div>  </div>
-      <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Kavramlar    </div>  </div>
-      <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Özellikler    </div>  </div>
-      <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Bilinmesi Gerekenler    </div>  </div>
-      <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Örnekler    </div>  </div>
-    </div>
 
 <div>
   <div class="beri-üst-1 beri-alt-1">
