--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -437,14 +437,14 @@ title: Kap Örgüsü
     </code></pre>
     <p></p>
 
-    <h3>Konumlama: <span data-metin="dikkat">ters-dizi | ters-satır | ters-sütun</span></h3>
-    <p>"ters-dizi" sınıfı bir HTML etiketindeki içeriği ters yönde dizerek gösterir.</p>
+    <h3>Konumlama: <span data-metin="dikkat">ters-dürme | ters-satır | ters-sütun</span></h3>
+    <p>"ters-dürme" sınıfı bir HTML etiketindeki içeriği ters yönde dürerek gösterir.</p>
     <p>"ters-satır" sınıfı bir HTML etiketindeki satırları aynalı olarak gösterir.</p>
     <p>"ters-sütun" sınıfı bir HTML etiketindeki sütunları aynalı olarak gösterir.</p>
     <p></p>
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
-      <div data-gnl="1 1p ters-dizi">
+      <div data-gnl="1 1p ters-dürme">
         <div data-gnl="1 3p">
           ters-dizi #1
         </div>
@@ -506,7 +506,7 @@ title: Kap Örgüsü
       </div>
     </div>
     <pre data-gnl="1 1p"><code class="language-html">
-    &lt;div data-gnl=&quot;1 1p ters-dizi&quot;&gt;
+    &lt;div data-gnl=&quot;1 1p ters-dürme&quot;&gt;
       &lt;div data-gnl=&quot;1 3p&quot;&gt;
         ters-dizi #1
       &lt;/div&gt;
