--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -446,22 +446,22 @@ title: Kap Örgüsü
       <h3>Önizleme</h3>
       <div data-gnl="1 1p ters-dürme">
         <div data-gnl="1 3p">
-          ters-dizi #1
+          ters-dürme #1
         </div>
         <div data-gnl="1 3p">
-          ters-dizi #2
+          ters-dürme #2
         </div>
         <div data-gnl="1 3p">
-          ters-dizi #3
+          ters-dürme #3
         </div>
         <div data-gnl="1 3p">
-          ters-dizi #4
+          ters-dürme #4
         </div>
         <div data-gnl="1 3p">
-          ters-dizi #5
+          ters-dürme #5
         </div>
         <div data-gnl="1 3p">
-          ters-dizi #6
+          ters-dürme #6
         </div>
       </div>
       <div data-gnl="1 1p ters-satır">
@@ -494,36 +494,27 @@ title: Kap Örgüsü
         <div data-gnl="1 3p">
           ters-sütun #3
         </div>
-        <div data-gnl="1 3p">
-          ters-sütun #4
-        </div>
-        <div data-gnl="1 3p">
-          ters-sütun #5
-        </div>
-        <div data-gnl="1 3p">
-          ters-sütun #6
-        </div>
       </div>
     </div>
     <pre data-gnl="1 1p"><code class="language-html">
     &lt;div data-gnl=&quot;1 1p ters-dürme&quot;&gt;
       &lt;div data-gnl=&quot;1 3p&quot;&gt;
-        ters-dizi #1
+        ters-dürme #1
       &lt;/div&gt;
       &lt;div data-gnl=&quot;1 3p&quot;&gt;
-        ters-dizi #2
+        ters-dürme #2
       &lt;/div&gt;
       &lt;div data-gnl=&quot;1 3p&quot;&gt;
-        ters-dizi #3
+        ters-dürme #3
       &lt;/div&gt;
       &lt;div data-gnl=&quot;1 3p&quot;&gt;
-        ters-dizi #4
+        ters-dürme #4
       &lt;/div&gt;
       &lt;div data-gnl=&quot;1 3p&quot;&gt;
-        ters-dizi #5
+        ters-dürme #5
       &lt;/div&gt;
       &lt;div data-gnl=&quot;1 3p&quot;&gt;
-        ters-dizi #6
+        ters-dürme #6
       &lt;/div&gt;
     &lt;/div&gt;
     &lt;div data-gnl=&quot;1 1p ters-sat&#305;r&quot;&gt;
@@ -555,15 +546,6 @@ title: Kap Örgüsü
       &lt;/div&gt;
       &lt;div data-gnl=&quot;1 3p&quot;&gt;
         ters-s&uuml;tun #3
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1 3p&quot;&gt;
-        ters-s&uuml;tun #4
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1 3p&quot;&gt;
-        ters-s&uuml;tun #5
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1 3p&quot;&gt;
-        ters-s&uuml;tun #6
       &lt;/div&gt;
     &lt;/div&gt;
     </code></pre>
