--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -582,7 +582,7 @@ title: Kap Örgüsü
 
 
 <style media="screen">
-  .önizleme{background-color:#efefef; padding:10px;}
+  .önizleme{background-color:#efefef; padding:10px; height:50vh; overflow-y: auto;}
   .önizleme [data-gnl]{border:1px solid #2c2171; background-color: #4c41a1; padding:10px; color:#eee;}
   .önizleme h3 {color:#999;margin:0 0 10px 0;}
 </style>
